# Ascend-MindIE-LLM

./: .pre-commit-config.yaml  LICENSE.md  README.md  build.sh  code_of_conduct.md  pyproject.toml  requirements.txt  security.md  setup.py  setup_mindie_llm.py
examples/atb_models/: CMakeLists.txt  README.md  public_address_statement.md  setup_atb_llm.py
examples/atb_models/docs/: torcklike_model_migration_guide.md
examples/atb_models/examples/: README.md
examples/atb_models/scripts/: build.sh  opensource_build.sh
examples/atb_models/tests/: run_all_tests.sh
src/: CMakeLists.txt
src/block_manager/: block_allocator.h  block_obj.h  block_table.cpp  block_table.h  block_tracker.cpp  block_tracker.h  copy_on_write_tracker.cpp  copy_on_write_tracker.h  cpu_npu_block_allocator.cpp  cpu_npu_block_allocator.h  device_aware_block_allocator.h  evictor.h  hashless_block_allocator.cpp  hashless_block_allocator.h  hashless_block_obj.cpp  hashless_block_obj.h  hit_rate_calculator.cpp  hit_rate_calculator.h  lru_evictor.cpp  lru_evictor.h  lwd_self_attn_block_manager.cpp  lwd_self_attn_block_manager.h  obj_pool.h  prefix_cache_block.cpp  prefix_cache_block.h  prefix_cache_block_allocator.cpp  prefix_cache_block_allocator.h  ref_counter.cpp  ref_counter.h  ref_counter_protocol.h  request_single_block_manager.cpp  request_single_block_manager.h  self_attn_block_manager.cpp  self_attn_block_manager.h
src/config_manager/: CMakeLists.txt  backend_config.cpp  base_config.cpp  base_config_manager.h  config_dynamic_handler.cpp  config_interaction.cpp  config_interaction.h  config_manager_impl.cpp  config_manager_impl.h  model_deploy_config.cpp  param_checker.cpp  ranktable_config.cpp  schedule_config.cpp  server_config.cpp
src/engine/: CMakeLists.txt  buffered_responser.cpp  buffered_responser.h  construct_execute_request.cpp  construct_execute_request.h  dummy_quota_manager.cpp  dummy_quota_manager.h  layerwise_mixin.cpp  llm_engine.cpp  llm_engine.h  lora_manager.cpp  lora_manager.h  loraops_mixin.cpp  model_exec_output_handler.cpp  model_exec_output_handler.h  response_buffer.h  scheduler_config.cpp  seq_group_builder_from_infer_req.cpp  seq_group_builder_from_infer_req.h  transfer_output_handler.cpp  transfer_output_handler.h
src/executor/: CMakeLists.txt  communicator.cpp  communicator.h  executor.cpp  executor.h  grpc_communicator.cpp  grpc_communicator.h  ipc_communicator.cpp  ipc_communicator.h
src/include/: basic_types.h  sampling.h
src/include/block_manager/: block_manager_interface.h
src/include/config/: config_dynamic_handler.h  config_info.h  config_manager.h  global_ip_info.h  model_config.h  param_checker.h
src/include/dataclass/: live_infer_context.h  metric.h  scheduling_budget.h  sequence.h  sequence_group.h  sequence_group_meta_data.h
src/include/engine/: illm_engine.h
src/include/executor/: executor_interface.h
src/include/layerwise_mixin/: layerwise_mixin.h
src/include/llm_manager/: callback.h  data_type.h  infer_callback.h  infer_request.h  infer_request_id.h  infer_request_impl.h  infer_response.h  infer_tensor.h  llm_infer_response.h  llm_manager.h
src/include/llm_manager_v2/: llm_manager_v2.h
src/include/load_balance/: iload_balancer.h
src/include/lora/: ilora_manager.h  loraops_mixin.h
src/include/request_response/: callback.h  pd_role.h  request.h  request_id.h  response.h
src/include/scheduler/: ischeduler.h
src/include/utils/: blocking_queue.h  check_utils.h  common_util.h  concurrent_deque.h  concurrent_map.h  data_type.h  env_util.h  error.h  error_queue.h  file_system.h  file_utils.h  id_utils.h  log.h  math_utils.h  mem_pool.h  memory_utils.h  process_group.h  qps_tracker.h  safe_envvar.h  safe_io.h  safe_path.h  safe_result.h  shared_memory.h  spin_lock_guard.h  status.h  string_utils.h  system_log.h  thread_group_cc.h
src/kernels/: build.sh  setup.py
src/llm_manager/: CMakeLists.txt  infer_request_impl.cpp  infer_tensor.cpp  llm_infer_request.cpp  llm_infer_response.cpp  llm_manager.cpp  llm_manager_adapter.cpp  llm_manager_adapter.h
src/llm_manager/python_api/: CMakeLists.txt  python_api_init.cpp
src/llm_manager_v2/: llm_manager.cpp
src/llm_manager_v2/impl/: llm_manager_impl.cpp
src/load_balance/: load_balancer.cpp  load_balancer.h
src/load_balance/balance_policy/: ibalance_policy.cpp  ibalance_policy.h  round_robin_policy.cpp  round_robin_policy.h
src/py_interface/: CMakeLists.txt  interface_init.cpp  pylog.cpp  pylog.h
src/scheduler/: post_scheduler.cpp  post_scheduler.h  pre_scheduler.cpp  pre_scheduler.h  scheduler.cpp  scheduler.h
src/scheduler/latency_predictor/: batch_latency_tracker.cpp  batch_latency_tracker.h  decode_regression.cpp  decode_regression.h  latency_predictor.cpp  latency_predictor.h  prefill_regression.cpp  prefill_regression.h  queue_counter.cpp  queue_counter.h
src/scheduler/policy/: dynamic_batch_recorder.cpp  dynamic_batch_recorder.h  dynamic_batch_size.cpp  dynamic_batch_size.h  fcfs_policy.cpp  fcfs_policy.h  layerwise_fcfs_policy.cpp  layerwise_fcfs_policy.h  pdds_policy.cpp  pdds_policy.h  policy.h  policy_factory.cpp  policy_factory.h  policy_helper.cpp  policy_helper.h  seq_group_collection.cpp  seq_group_collection.h
src/sequence/: live_infer_context.cpp  scheduling_budget.cpp  sequence.cpp  sequence_group.cpp
src/server/: README.md  options.cmake
src/server/conf/: config.json
src/server/daemon/: CMakeLists.txt  llm_daemon.cpp
src/server/endpoint/: CMakeLists.txt  endpoint.cpp  endpoint.h  endpoint_def.cpp  endpoint_def.h
src/server/include/: dcmi_interface_api.h  infer_tokenizer.h
src/server/infer_instances/: infer_instances.cpp  infer_instances.h
src/server/scripts/: A2_double_machine.md  A2_double_machine.sh  A2_single_machine.md  A2_single_machine.sh  A3_single.md  A3_single.sh  (+2 more)
src/utils/: check_utils.cpp  common_util.cpp  env_util.cpp  error.cpp  error_queue.cpp  id_utils.cpp  memory_utils.cpp  process_group.cpp  qps_tracker.cpp  safe_envvar.cpp  safe_io.cpp  safe_path.cpp  safe_result.cpp  shared_memory.cpp  string_utils.cpp  thread_group_cc.cpp
(+714 files in other folders)
